--- a/index.html
+++ b/index.html
@@ -89,48 +89,48 @@
           <div class="swiper-container mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <a href="./img/main-slide/TORTUGA.jpg">
-                  <img src="./img/main-slide/TORTUGA.jpg" class="img-fluid" alt="">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781884/TORTUGA_pvoznw.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781884/TORTUGA_pvoznw.jpg" class="img-fluid" alt="tortuga nadando en playas de punta cana vista en excursion de punta cana yacht rentals">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/playapalmilla1.jpg">
-                  <img src="./img/main-slide/playapalmilla1.jpg" class="img-fluid" alt="">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785833/contacto.hero1_n9omaz.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785833/contacto.hero1_n9omaz.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/galeria5.JPG">
-                  <img src="./img/galeria5.JPG" class="img-fluid" alt="tomando un vino en excursion en yate en republica dominicana">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785831/galeria51_ul8xq1.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785831/galeria51_ul8xq1.jpg" class="img-fluid" alt="tomando un vino en excursion en yate en republica dominicana">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/aboutUs-img.jpg">
-                  <img src="./img/main-slide/aboutUs-img.jpg" class="img-fluid" alt="snorkel en republica dominicana">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623786291/Snorkel1_xidbam.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623786291/Snorkel1_xidbam.jpg" class="img-fluid" alt="snorkel en republica dominicana">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/velero.jpeg">
-                  <img src="./img/main-slide/velero.jpeg" class="img-fluid" alt="velero en playa de republica dominicana">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781815/velero_lfknqd.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781815/velero_lfknqd.jpg" class="img-fluid" alt="velero en playa de republica dominicana">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/sala.jpeg">
-                  <img src="./img/main-slide/sala.jpeg" class="img-fluid" alt="comiendo hamburguesas en un yate con mis amigos">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781805/food_bawhnv.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781805/food_bawhnv.jpg" class="img-fluid" alt="comiendo hamburguesas en un yate con mis amigos">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/drone.jpeg">                
-                  <img src="./img/main-slide/drone.jpeg" class="img-fluid" alt="playa saona un paraiso en republica dominicana">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623786291/Saona11_sujrqt.jpg">                
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623786291/Saona11_sujrqt.jpg" class="img-fluid" alt="playa saona un paraiso en republica dominicana">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/Nueva imagen8.JPG">
-                  <img src="./img/main-slide/Nueva imagen8.JPG" class="img-fluid" alt="hermosa vista de desde un yate en punta cana">
+                <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781883/Nueva_imagen8_fhvexa.jpg">
+                  <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623781883/Nueva_imagen8_fhvexa.jpg" class="img-fluid" alt="hermosa vista de desde un yate en punta cana">
                 </a>
               </div>
               <div class="swiper-slide">
-                <a href="./img/main-slide/bote.jpeg">                
-                  <img src="./img/main-slide/bote.jpeg" class="img-fluid" alt="yate de lujo en alquiler">
+                <a href="https://res-console.cloudinary.com/michaelxk-com/thumbnails/v1/image/upload/v1623781822/eWF0ZV9kZjB6enE=/preview">                
+                  <img src="https://res-console.cloudinary.com/michaelxk-com/thumbnails/v1/image/upload/v1623781822/eWF0ZV9kZjB6enE=/preview" class="img-fluid" alt="yate de lujo en alquiler">
                 </a>
               </div>
             </div>
@@ -154,7 +154,7 @@
       <main class="main">
           <div class="main-info">
             <p>
-              <strong>¿Quieres alquilar una embarcación en Punta Cana?</strong> Alquilar un yate, catamarán o lancha con Punta Cana Yacht Rentals es una fantástica manera de navegar y explorar las majestuosas playas e islas de Republica Dominicana. Vive una experiencia inolvidable junto a tu pareja, familia o amigos y descubre la belleza de estos idílicos lugares a bordo de nuestros yates en alquiler. Disfruta de tus vacaciones con nuestro servicio exclusivo de alquiler de yates privados y alquiler de embarcaciones privadas en Punta Cana.
+              ¿Quieres alquilar una embarcación en Punta Cana? Alquilar un yate, catamarán o lancha con Punta Cana Yacht Rentals es una fantástica manera de navegar y explorar las majestuosas playas e islas de Republica Dominicana. Vive una experiencia inolvidable junto a tu pareja, familia o amigos y descubre la belleza de estos idílicos lugares a bordo de nuestros yates en alquiler. Disfruta de tus vacaciones con nuestro servicio exclusivo de alquiler de yates privados y alquiler de embarcaciones privadas en Punta Cana.
             </p>
             <p>
               Punta Cana Yachts Rentals es una a empresa de alquiler de yates en Punta Cana y alquiler de yates en La Romana con más de 10 años de experiencia. Como pioneros en la gestión del charter privado de lujo en República Dominicana, ofrecemos una amplia flota de yates de lujo para satisfacer las necesidades de los clientes más exigentes. Disponemos de embarcaciones que abarcan desde los 30 pies hasta 120 pies.
@@ -166,7 +166,7 @@
           <div class="container-fluid">
             <div class="promo-video">
               <video id="main-video" width="100%" height="600" controls>
-                <source src="videos/instagram.mp4" type="video/mp4">
+                <source src="https://res.cloudinary.com/michaelxk-com/video/upload/v1623782696/instagram_qstmlx.mp4" type="video/mp4">
                 <source src="movie.ogg" type="video/ogg">
                   Su navegador no soporta la etiqueta de video.
               </video>
@@ -175,7 +175,7 @@
               <h1>Punta Cana Yacht Rentals</h1>
               <div class="divider"></div>
               <p class="mt-5">
-                Alquiler de yates en Punta Cana y alquiler de yates en Casa de Campo.
+                ALQUILER DE Yates en Punta Cana y alquiler de yates en Casa de Campo
                 Punta Cana Yacht Rentals es la empresa número 1 de alquiler de barcos en República Dominicana.
                 ¿Quiere alquilar un barco privado en Punta Cana?  Te invitamos a una maravillosa e inolvidable experiencia a bordo de un yate navegando alrededor del mar turquesa que rodea las soleadas islas y playas de República Dominicana.
               </p>
@@ -333,9 +333,9 @@
       <h2>¿Cómo es el proceso?</h2>
        <h2>Super simple</h2>
        <div class="divider"></div>
-       <p class="mt-4">Ponte en contacto con nosotros
+       <p class="mt-4">Te pones en contacto y nosotros
          nos encargamos del resto, solo debes 
-         traer tus ganas de navergar y celebrar 
+         traer tu ganas de navergar y celebrar 
          un momento unico.
        </p>
     </div>
@@ -348,21 +348,21 @@
     <h2 class="gallery__title mb-4">Galeria de experiencias</h2>
     <div class="row">
       <div class="col-lg-8 foto1" >
-        <a href="./img/galeria/Drone 22.jpg">
-          <img src="./img/galeria/Drone 22.jpg" class="img-fluid" alt="imagen de yate en playa palmilla, republica dominicana">
+        <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783797/main-galer_ininjr.jpg">
+          <img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783797/main-galer_ininjr.jpg" class="img-fluid" alt="imagen de yate en playa palmilla, republica dominicana">
         </a>
       </div>
       <div class="col-lg-4 foto2">
-        <a href="./img/galeria/galeria3.jpeg"><img src="./img/galeria/galeria3.jpeg" class="img-fluid" alt=""></a>
+        <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783800/galeria3_m2ljcl.jpg"><img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783800/galeria3_m2ljcl.jpg" class="img-fluid" alt="excursion en yate experiencia con una langosta en las playas de punta cana"></a>
       </div>
       <div class="col-lg-4 foto3">
-        <a href="./img/things-to-do-on-a-boat.jpeg"><img src="./img/things-to-do-on-a-boat.jpeg" class="img-fluid" alt=""></a>
+        <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783078/things-to-do-on-a-boat_mehde9.jpg"><img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783078/things-to-do-on-a-boat_mehde9.jpg" class="img-fluid" alt=""></a>
       </div>
       <div class="col-lg-4 foto4">
-        <a href="./img/galeria/Nuevaimagen4.JPG"><img src="./img/galeria/Nuevaimagen4.JPG" class="img-fluid" alt=""></a>
+        <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783797/experiencia_g2gvyi.jpg"><img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623783797/experiencia_g2gvyi.jpg" class="img-fluid" alt=""></a>
       </div>
       <div class="col-lg-4 foto5">
-        <a href="./img/galeria/familia.jpeg"><img src="./img/galeria/familia.jpeg" class="img-fluid" alt=""></a>
+        <a href="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785831/galeria51_ul8xq1.jpg"><img src="https://res.cloudinary.com/michaelxk-com/image/upload/v1623785831/galeria51_ul8xq1.jpg" class="img-fluid" alt=""></a>
       </div>
     </div>
   </div>
@@ -380,13 +380,13 @@
                <div class="projectFactsWrap ">
                    <div class="item wow fadeInUpBig animated animated" data-number="12">
                        <i class="fa fa-briefcase"></i>
-                       <p id="number1" class="number">23</p>
+                       <p id="number1" class="number">12</p>
                        <span></span>
-                       <p>Staff</p>
+                       <p>Experiencias</p>
                    </div>
                    <div class="item wow fadeInUpBig animated animated" data-number="55">
                     <i class="fas fa-anchor"></i>
-                       <p id="number2" class="number">3,796</p>
+                       <p id="number2" class="number">447</p>
                        <span></span>
                        <p>Clientes Satisfechos</p>
                    </div>
@@ -400,7 +400,7 @@
                       <i class="fas fa-ship"></i>
                        <p id="number4" class="number">37</p>
                        <span></span>
-                       <p>Embarcaciones</p>
+                       <p>Nuestra Flota</p>
                    </div>
                </div>
            </div>
@@ -441,21 +441,6 @@
                   <span class="dot" onclick="currentSlide(1)"></span> 
                   <span class="dot" onclick="currentSlide(2)"></span> 
                   <span class="dot" onclick="currentSlide(3)"></span> 
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="contact-form-area">
-            <div class="contact_form row">
-              <div class="col-lg-6 col-md-6 col-sm-12">
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-12 contact-form-area-info">
-                <h2>¿Tienes alguna pregunta?</h2>
-                <div class="contact-button-action">
-                  <a href="#copywrite">
-                    <button  type="button" class="btn btn-info btn-lg">Contacto</button>
-                  </a>
                 </div>
               </div>
             </div>
@@ -550,7 +535,7 @@
             <option value="1">Solicitar Cotización</option>
             <option value="2">Servicio de Catering</option>
             <option value="3">Alquiler de Yate</option>
-            <option value="3">Coordinar evento</option>
+            <option value="3">Invitar un Cafe</option>
           </select>
           <div class="form-floating mb-3">
             <textarea class="form-control" name="mensaje" id="floatingTextarea2" style="height: 100px" placeholder="mensaje" required></textarea>
@@ -581,82 +566,12 @@
       </ul>
     </div>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/simple-lightbox.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
       <script src="js/main.js"></script>
-      <script>
-        //swipper home carousel
-        let swiper = new Swiper(".mySwiper", {
-          slidesPerView: 3,
-          spaceBetween: 30,
-          slidesPerGroup: 3,
-          loop: true,
-          loopFillGroupWithBlank: true,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
-          navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-          },
-        });
-      </script>
-      <script>
-          let slideIndex = 1;
-          showSlides(slideIndex);
-          function plusSlides(n) {
-            showSlides(slideIndex += n);
-          }
-          function currentSlide(n) {
-            showSlides(slideIndex = n);
-          }
-          function showSlides(n) {
-            let i;
-            let slides = document.getElementsByClassName("mySlides");
-            let dots = document.getElementsByClassName("dot");
-            if (n > slides.length) {slideIndex = 1}    
-            if (n < 1) {slideIndex = slides.length}
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";  
-            }
-            for (i = 0; i < dots.length; i++) {
-                dots[i].className = dots[i].className.replace(" active", "");
-            }
-            slides[slideIndex-1].style.display = "block";  
-            dots[slideIndex-1].className += " active";
-          }
-      </script>
-      <script>
-        let options = {
-            root: null,
-            rootMargin: '0px',
-            threshold: 1.0
-          }
-          let callback = (entries, observer) => {
-            entries.forEach(entry => {
-              if(entry.target.id == 'main-video') {
-
-              }
-              if(entry.isIntersecting) {
-                entry.target.play();
-              }
-              else {
-                entry.target.pause();
-              }
-            })
-          }
-          let observer = new IntersectionObserver(callback, options)
-            observer.observe(document.getElementById('main-video'));
-      </script>
-      <script>
-        // lightbox gallery
-        let lightbox = new SimpleLightbox('.index-gallery a'),
-            lightboxMain = new SimpleLightbox('.mySwiper a'),
-            lightboxBoats = new SimpleLightbox('.nuestraFLota-gallery a');
-      </script>
   </body>
 </html>
